Renamed a css class team-member

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -190,7 +190,7 @@
         </div>
     </section>
 
-    <!-- About Grid Section -->
+    <!-- About Performous Section -->
     <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -350,7 +350,7 @@
         </div>
     </section>
 
-    <!-- Team Section -->
+    <!-- Project Section -->
     <section id="project" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -361,7 +361,7 @@
             </div>
             <div class="row">
 				<div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="contact-and-download-source">
 						<a href="https://github.com/performous/performous/wiki" style="color:#333">
 							<span class="fa-stack" style="font-size:9em">
 								<i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -373,7 +373,7 @@
                     </div>
                 </div>
 				<div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="contact-and-download-source">
 						<a href="http://webchat.freenode.net/?channels=#performous" style="color:#333">
 							<span class="fa-stack" style="font-size:9em">
 								<i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -385,7 +385,7 @@
                     </div>
                 </div>
 				<div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="contact-and-download-source">
 						<a href="https://github.com/performous/performous/issues/new" style="color:#333">
 							<span class="fa-stack" style="font-size:9em">
 								<i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -397,7 +397,7 @@
                     </div>
                 </div>
 				<div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="contact-and-download-source">
 						<a href="https://github.com/performous/performous" style="color:#333">
 							<span class="fa-stack" style="font-size:9em">
 								<i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -409,7 +409,7 @@
                     </div>
                 </div>
 				<div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="contact-and-download-source">
 						<a href="https://github.com/performous/composer" style="color:#333">
 							<span class="fa-stack" style="font-size:9em">
 								<i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -421,7 +421,7 @@
                     </div>
                 </div>
 				<div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="contact-and-download-source">
 						<a href="http://www.facebook.com/performous" style="color:#333">
 							<span class="fa-stack" style="font-size:9em">
 								<i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -446,7 +446,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="contact-and-download-source">
 						<span class="fa-stack" style="font-size:9em">
 							<i class="fa fa-circle fa-stack-2x text-primary"></i>
 							<i class="fa fa-windows fa-stack-1x fa-inverse"></i>
@@ -456,7 +456,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="contact-and-download-source">
 						<span class="fa-stack" style="font-size:9em">
 							<i class="fa fa-circle fa-stack-2x text-primary"></i>
 							<i class="fa fa-linux fa-stack-1x"></i>
@@ -469,7 +469,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member">
+                    <div class="contact-and-download-source">
 						<span class="fa-stack" style="font-size:9em">
 							<i class="fa fa-circle fa-stack-2x text-primary"></i>
 							<i class="fa fa-apple fa-stack-1x fa-inverse"></i>
