made a few links available

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -680,7 +680,7 @@
 								Known plain text attacks have been successful but they don't get us very far because different SingStar releases use different keys.
 							</p>
 							<p>
-								We are still looking for 2D and 3D artists so if you'd prefer Performous not looking ugly, please contact us (Use the Webchat)!
+								We are still looking for 2D and 3D artists so if you'd prefer Performous not looking ugly, please contact us (Use the <a href="http://webchat.freenode.net/?channels=#performous">Webchat</a>)!
 							</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Newsitem</button>
                         </div>
@@ -741,7 +741,8 @@
 								A skilled SVG/Inkscape artist is also desperately needed as there still remains a lot of theming work to be done in 2D.
 							</p>
 							<p>
-								You may contact us by Webchat (IRC) or Feedback (issue tracker).
+								You may contact us by <a href="http://webchat.freenode.net/?channels=#performous">Webchat (IRC)</a> or 
+								<a href="https://github.com/performous/performous/issues/new">Feedback (issue tracker)</a>.
 							</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Newsitem</button>
                         </div>
@@ -779,7 +780,7 @@
 								Those with existing git clones from SF.net will need to change the upstream URL:
 								<ul style="text-align:left">
 									<li>git remote set-url origin git://github.com/performous/performous.git</li>
-								<ul>
+								</ul>
 							</p>
 							<button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Newsitem</button>
                         </div>
