Edited Text on front Page

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -78,9 +78,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#news" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Welcome To Performous!</div>
+                <div class="intro-heading">Let's do some Karaoke, Band Games and Dancing!</div>
+                <a href="#news" class="page-scroll btn btn-xl">Let's go!</a>
             </div>
         </div>
     </header>
