--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -86,7 +86,7 @@
     </header>
 
     <!-- News Section -->
-    <section id="news">
+    <section id="news" class="bg-light-gray">
 		<div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -191,7 +191,7 @@
     </section>
 
     <!-- About Performous Section -->
-    <section id="about" class="bg-light-gray">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -299,7 +299,7 @@
     </section>
 
     <!-- Composer Section -->
-    <section id="composer">
+    <section id="composer" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -351,7 +351,7 @@
     </section>
 
     <!-- Project Section -->
-    <section id="project" class="bg-light-gray">
+    <section id="project">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -435,8 +435,8 @@
         </div>
     </section>
 
-    <!-- Clients Aside -->
-    <section id="download">
+    <!-- Download Section -->
+    <section id="download" class="bg-light-gray">
         <div class="container">
 			<div class="row">
                 <div class="col-lg-12 text-center">
@@ -534,7 +534,7 @@
     </section>
 
     <footer>
-        <div class="container">
+        <div class="container" class="bg-light-gray">
             <div class="row">
                 <div class="col-md-4">
                 </div>
