--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -90,8 +90,8 @@
 		<div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">News</h2>
-                    <h3 class="section-subheading text-muted">News related to Performous</h3>
+                    <h2 class="section-heading">news</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
             <div class="row">
@@ -180,8 +180,6 @@
                     </div>
                 </div>
             </div>
-			
-			<!-- TODO: Make Page for all news items -->
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<a href="#news" class="btn btn-xl">More News</a>
