--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -119,7 +119,7 @@
                         <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
                     <div class="news-caption">
-                        <h4>Localizations needs update</h4>
+                        <h4>Localization needs update</h4>
                         <p class="text-muted">2013-06-17</p>
                     </div>
                 </div>
