another fix for width

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -395,6 +395,8 @@
 						</a>
                     </div>
                 </div>
+			</div>
+			<div class="row">
 				<div class="col-sm-4">
                     <div class="contact-and-download-source">
 						<a href="https://github.com/performous/performous" style="color:#333">
