--- a/composer.html
+++ b/composer.html
@@ -29,7 +29,7 @@
             <li><a href="others">Other games</a></li>
             <li><h2>Project links</h2></li>
             <li><a href="https://github.com/performous/performous/wiki" target="_blank">Documentation</a></li>
-            <li><a href="http://webchat.freenode.net/?channels=#performous" target="_blank">Webchat</a></li>
+            <li><a href="https://discord.gg/NS3m3ad" target="_blank">Discord</a></li>
             <li><a href="https://github.com/performous/performous/issues/new" target="_blank">Feedback</a></li>
             <li><a href="https://github.com/performous/performous" target="_blank">Performous@GH</a></li>
             <li><a href="https://github.com/performous/composer" target="_blank">Composer@GH</a></li>
