--- a/htdocs-source/Model.htm
+++ b/htdocs-source/Model.htm
@@ -8,9 +8,9 @@
   <script src="js/index-page.js" defer></script>
 
   <video id="bgVideo" autoplay loop muted style="position: fixed; z-index: -1; width: 100%; height: 100%; object-fit: cover">
-    <source src="/bgs/GoldenDust.mp4" type="video/mp4">
-    <source src="/bgs/GoldenDust.ogv" type="video/ogg">
-    <source src="/bgs/GoldenDust.webm" type="video/webm">
+    <source src="./bgs/GoldenDust.mp4" type="video/mp4">
+    <source src="./bgs/GoldenDust.ogv" type="video/ogg">
+    <source src="./bgs/GoldenDust.webm" type="video/webm">
   </video>
 
   <div id="sitebox">
